--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -1376,5 +1376,6 @@
     "confirm": "Confirm",
     "cancel": "Cancel"
   },
-  "status": "Status"
+  "status": "Status",
+  "Wild Card": "Wild Card"
 }
