--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -1468,5 +1468,6 @@
   "REWARD POOL": "Quỹ thưởng",
   "EXCHANGE FOR HEWE": "Quy đổi sang HEWE",
   "COMMUNITY SUPPORT REWARDS": "Hỗ trợ cộng đồng",
-  "status": "Trạng thái"
+  "status": "Trạng thái",
+  "Wild Card": "Thẻ Đặc Cách"
 }
