--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -236,6 +236,10 @@
   "confirm password": "Confirm password",
   "wallet address": "Wallet address",
   "user name": "User name",
+  "branch": "Branch",
+  "Vietnam": "Vietnam",
+  "America": "America",
+  "India": "India",
   "phone": "Phone number",
   "Phone is required": "Phone number is required",
   "Please enter the correct phone format": "Please enter the correct phone number format",
@@ -529,7 +533,7 @@
       "DreamPool": "DreamPool",
       "Config": "Config",
       "User History": "User History",
-      "Basic Members": "Basic Members",
+      "Standard Members": "Standard Members",
       "Pre-Tier 2 Pending": "Pre-Tier 2 Pending",
       "Pre-Tier 2 Users": "Pre-Tier 2 Users",
       "Pre-Tier 2 Pool": "Pre-Tier 2 Pool",
