--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -234,6 +234,10 @@
   "wallet address": "Địa chỉ ví",
   "user name": "Tên tài khoản",
   "User Name": "Tên người dùng",
+  "branch": "Nhánh",
+  "Vietnam": "Việt Nam",
+  "America": "Mỹ",
+  "India": "Ấn Độ",
   "phone": "Số điện thoại",
   "Phone": "Số điện thoại",
   "Phone is required": "Số điện thoại là bắt buộc",
@@ -613,7 +617,7 @@
       "DreamPool": "DreamPool",
       "Config": "Cấu hình",
       "User History": "Lịch sử người dùng",
-      "Basic Members": "Thành viên cơ bản",
+      "Standard Members": "Thành viên cơ bản",
       "Pre-Tier 2 Pending": "Pre-Tier 2 chờ duyệt",
       "Pre-Tier 2 Users": "Người dùng Pre-Tier 2",
       "Pre-Tier 2 Pool": "Pool Pre-Tier 2",
