--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -824,7 +824,7 @@
     "exchangeRate": "Exchange Rate",
     "totalAmount": "Total Amount",
     "withdrawalAmount": "Withdrawal Amount",
-    "tax": "Tax (10%)",
+    "tax": "Tax",
     "transactionFee": "Transaction Fee",
     "youWillReceive": "You will receive",
     "amountTooSmall": "Amount is too small after fees",
@@ -843,7 +843,7 @@
     "amount": "Amount",
     "exchangeRate": "Exchange Rate",
     "totalAmountVND": "Total Amount (VND)",
-    "tax": "Tax (10%)",
+    "tax": "Tax",
     "transactionFee": "Transaction Fee",
     "received": "Received",
     "totalReceived": "Total Amount Received",
