--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -910,7 +910,7 @@
     "exchangeRate": "Tỷ giá",
     "totalAmount": "Tổng số tiền",
     "withdrawalAmount": "Số tiền yêu cầu rút",
-    "tax": "Thuế (10%)",
+    "tax": "Thuế",
     "transactionFee": "Phí giao dịch",
     "youWillReceive": "Bạn sẽ nhận được",
     "amountTooSmall": "Số tiền quá nhỏ sau khi trừ phí",
@@ -929,7 +929,7 @@
     "amount": "Số tiền",
     "exchangeRate": "Tỷ giá",
     "totalAmountVND": "Tổng tiền (VND)",
-    "tax": "Thuế (10%)",
+    "tax": "Thuế",
     "transactionFee": "Phí giao dịch",
     "received": "Số tiền nhận được",
     "totalReceived": "Tổng tiền thực nhận",
