--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -1473,5 +1473,27 @@
   "EXCHANGE FOR HEWE": "Quy đổi sang HEWE",
   "COMMUNITY SUPPORT REWARDS": "Hỗ trợ cộng đồng",
   "status": "Trạng thái",
-  "Wild Card": "Thẻ Đặc Cách"
+  "Wild Card": "Thẻ Đặc Cách",
+  "Available HEWE": "HEWE khả dụng",
+  "Reward HEWE": "HEWE thưởng",
+  "WITHDRAW HEWE": "RÚT HEWE",
+  "Available USDT": "USDT khả dụng",
+  "Processing USDT": "USDT đang xử lý",
+  "WITHDRAW USDT": "RÚT USDT",
+  "Filter by coin": "Lọc theo loại coin",
+  "All Coins": "Tất cả các coin",
+  "Processing...": "Đang xử lý...",
+  "Congratulations! You're on the waiting list for Tier 2 in the Pre-Tier2 program": "Chúc mừng! Bạn đã nằm trong danh sách chờ Tier 2 trong chương trình Pre-Tier2",
+  "Congratulations! You're eligible for Tier 2 with the new Pre-Tier2 program.": "Chúc mừng! Bạn đủ điều kiện cho Tier 2 với chương trình Pre-Tier2 mới.",
+  "Go to the payment page now.": "Đi đến trang thanh toán ngay.",
+  "Tier 2 entered": "Đã vào Tier 2",
+  "Tier 1 :": "Tier 1 :",
+  "Tier 2 :": "Tier 2 :",
+  "Tier 2 Users": "Người dùng Tier 2",
+  "Available USDT :": "USDT khả dụng :",
+  "Available HEWE :": "HEWE khả dụng :",
+  "Available AMC :": "AMC khả dụng :",
+  "Minimum withdrawal amount is {amount} HEWE. Your available balance is {balance} HEWE.": "Số tiền rút tối thiểu là {amount} HEWE. Số dư khả dụng của bạn là {balance} HEWE.",
+  "Completed ranking time": "Thời gian hoàn thành hạng",
+  "Disqualified (Tier 1)": "Không đủ điều kiện (Tier 1)"
 }
