--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -525,6 +525,9 @@
   "legalTier": "Chính sách Tier",
   "delete successful": "Đã xoá thành công",
   "createAdmin": "Tạo Admin",
+  "Root Admin": "Quản trị viên gốc",
+  "Admin": "Quản trị viên",
+  "Grant root admin privileges": "Cấp quyền quản trị viên gốc",
   "admin-create-admin": "Admin - Tạo Admin",
   "list admin": "Danh sách Admin",
   "admin-admin": "Admin - Danh sách Admin",
