--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -44,6 +44,27 @@
   "QR code will be displayed here": "QR code will be displayed here",
   "I have transferred": "I have transferred",
   "Cancel": "Cancel",
+  "Clear": "Clear",
+  "Save Signature": "Save Signature",
+  "Please provide your signature": "Please provide your signature",
+  "Attach a file": "Attach a file",
+  "Please add photos": "Please add photos",
+  "Click to upload": "Click to upload",
+  "Change Image": "Change Image",
+  "Uploading...": "Uploading...",
+  "Image uploaded": "Image uploaded",
+  "PNG, JPG, JPEG (Max 5MB)": "PNG, JPG, JPEG (Max 5MB)",
+  "Please upload a valid image file (PNG, JPG, JPEG)": "Please upload a valid image file (PNG, JPG, JPEG)",
+  "File size must be less than 5MB": "File size must be less than 5MB",
+  "Image uploaded successfully": "Image uploaded successfully",
+  "You can only upload CCCD front image once": "You can only upload CCCD front image once",
+  "You can only upload CCCD back image once": "You can only upload CCCD back image once",
+  "You can only upload CCCD image once. Please contact admin to update.": "You can only upload CCCD image once. Please contact admin to update.",
+  "Your signature will be used for contract signing purposes": "Your signature will be used for contract signing purposes",
+  "Please sign in the white box above": "Please sign in the white box above",
+  "Signature saved successfully": "Signature saved successfully",
+  "User Signature": "User Signature",
+  "Download Signature": "Download Signature",
   "Order created successfully": "Order created successfully",
   "Failed to create order": "Failed to create order",
   "Creating order...": "Creating order...",
@@ -445,6 +466,17 @@
   "Insufficient balance": "Insufficient balance",
   "isNotSerepayWalletAlert": "Please switch to using Serepay wallet. Documents download link: ",
   "download": "Download",
+  "Download": "Download",
+  "Upload CCCD (Citizen ID Card)": "Upload CCCD (Citizen ID Card)",
+  "Please upload both front and back of your CCCD for contract processing": "Please upload both front and back of your CCCD for contract processing",
+  "CCCD Front": "CCCD Front",
+  "CCCD Back": "CCCD Back",
+  "CCCD (Citizen ID Card)": "CCCD (Citizen ID Card)",
+  "Contract has been completed": "Contract has been completed",
+  "Delete CCCD Images (Mark Contract Completed)": "Delete CCCD Images (Mark Contract Completed)",
+  "Are you sure you want to delete CCCD images and mark contract as completed? This action cannot be undone.": "Are you sure you want to delete CCCD images and mark contract as completed? This action cannot be undone.",
+  "CCCD images deleted and contract marked as completed": "CCCD images deleted and contract marked as completed",
+  "Failed to download image": "Failed to download image",
   "The wallet address does not exist in the Serepay system": "The wallet address does not exist in the Serepay system",
 
   "congratPackageB": "Congratulations, you have successfully paid for package B",
