--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -35,6 +35,27 @@
   "QR code will be displayed here": "Mã QR sẽ được hiển thị tại đây",
   "I have transferred": "Tôi đã chuyển",
   "Cancel": "Hủy",
+  "Clear": "Xóa",
+  "Save Signature": "Lưu chữ ký",
+  "Please provide your signature": "Vui lòng cung cấp chữ ký của bạn",
+  "Attach a file": "Đính kèm tệp",
+  "Please add photos": "Vui lòng thêm ảnh",
+  "Click to upload": "Nhấp để tải lên",
+  "Change Image": "Đổi ảnh",
+  "Uploading...": "Đang tải lên...",
+  "Image uploaded": "Ảnh đã tải lên",
+  "PNG, JPG, JPEG (Max 5MB)": "PNG, JPG, JPEG (Tối đa 5MB)",
+  "Please upload a valid image file (PNG, JPG, JPEG)": "Vui lòng tải lên file ảnh hợp lệ (PNG, JPG, JPEG)",
+  "File size must be less than 5MB": "Kích thước file phải nhỏ hơn 5MB",
+  "Image uploaded successfully": "Tải lên ảnh thành công",
+  "You can only upload CCCD front image once": "Bạn chỉ có thể tải lên ảnh mặt trước CCCD một lần",
+  "You can only upload CCCD back image once": "Bạn chỉ có thể tải lên ảnh mặt sau CCCD một lần",
+  "You can only upload CCCD image once. Please contact admin to update.": "Bạn chỉ có thể tải lên ảnh CCCD một lần. Vui lòng liên hệ admin để cập nhật.",
+  "Your signature will be used for contract signing purposes": "Chữ ký của bạn sẽ được sử dụng để ký hợp đồng",
+  "Please sign in the white box above": "Vui lòng ký vào khung màu trắng phía trên",
+  "Signature saved successfully": "Lưu chữ ký thành công",
+  "User Signature": "Chữ ký người dùng",
+  "Download Signature": "Tải xuống chữ ký",
   "Order created successfully": "Tạo đơn hàng thành công",
   "Failed to create order": "Tạo đơn hàng thất bại",
   "Creating order...": "Đang tạo đơn hàng...",
@@ -442,6 +463,17 @@
   "Insufficient balance": "Không đủ số dư",
   "isNotSerepayWalletAlert": "Vui lòng chuyển sang sử dụng ví Serepay. Link tải tài liệu hướng dẫn : ",
   "download": "Tải xuống",
+  "Download": "Tải xuống",
+  "Upload CCCD (Citizen ID Card)": "Tải lên CCCD (Căn cước công dân)",
+  "Please upload both front and back of your CCCD for contract processing": "Vui lòng tải lên cả mặt trước và mặt sau của CCCD để xử lý hợp đồng",
+  "CCCD Front": "Mặt trước CCCD",
+  "CCCD Back": "Mặt sau CCCD",
+  "CCCD (Citizen ID Card)": "CCCD (Căn cước công dân)",
+  "Contract has been completed": "Hợp đồng đã được hoàn thành",
+  "Delete CCCD Images (Mark Contract Completed)": "Xóa hình ảnh CCCD (Đánh dấu hợp đồng đã hoàn thành)",
+  "Are you sure you want to delete CCCD images and mark contract as completed? This action cannot be undone.": "Bạn có chắc chắn muốn xóa hình ảnh CCCD và đánh dấu hợp đồng đã hoàn thành? Hành động này không thể hoàn tác.",
+  "CCCD images deleted and contract marked as completed": "Hình ảnh CCCD đã được xóa và hợp đồng đã được đánh dấu hoàn thành",
+  "Failed to download image": "Tải xuống hình ảnh thất bại",
   "The wallet address does not exist in the Serepay system": "Địa chỉ ví không tồn tại trong hệ thống Serepay",
   "ourTeam": "Đội ngũ của chúng tôi",
 
